deployment-wordpress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress
  namespace: argocd-test
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress
        tier: frontend
    spec:
      volumes:
        - name: wordpress-persistent-storage-1
          persistentVolumeClaim:
            claimName: wp-pv-claim-1
      containers:
          terminationMessagePath: /dev/termination-log
          name: wordpress
          ports:
            - name: wordpress
              containerPort: 80
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: wordpress-persistent-storage-1
              mountPath: /var/www/html
          terminationMessagePolicy: File
          image: 'wordpress:4.8-apache'
      restartPolicy: Always
